--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,29 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+        .box {
+                display: inline-block;
+                width: 125px;
+                height: 125px;
+                margin: 25px;
+                border-radius: 10px;
+              }
+        #sampler{
+          width:1080px;
+          height:420px;
+        }
+        #samples{
+          display: block; 
+          width: 300px;
+        }
+      </style>
+      <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+            
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
