separated concerns into separate components

--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,11 @@
           height:420px;
         }
         #samples{
-          display: block; 
+          display: inline; 
           width: 300px;
+        }
+        #sample-name-input{
+          width: 300px
         }
       </style>
       <!-- Compiled and minified CSS -->
