--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,9 @@
 
     <title>React App</title>
     <style>
+      html{
+        background-color: black;
+      }
         .box {
                 display: inline-block;
                 width: 125px;
@@ -36,6 +39,9 @@
                 margin: 25px;
                 border-radius: 10px;
               }
+        #app-title{
+          width: 25%;
+        }
         #sampler{
           width:1080px;
           height:420px;
@@ -46,6 +52,9 @@
         }
         #sample-name-input{
           width: 300px
+        }
+        div{
+          padding: 15px
         }
       </style>
       <!-- Compiled and minified CSS -->
