Readded some styling for the pads and redid logic to accoubnt for audio buffer times

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <style>
       html{
         background-color: black;
+        font-family: 'Permanent Marker', cursive;
       }
       body{
         font-family: 'Permanent Marker', cursive;
@@ -46,7 +47,6 @@
         background-color: orange;
       }
       button{
-      font-family: 'Permanent Marker', cursive;
       font-size: 1em;
       }
       .form-div{
@@ -72,6 +72,9 @@
                 height: 125px;
                 margin: 25px;
                 border-radius: 10px;
+                background: black;
+                font-family: 'Permanent Marker', cursive;
+                overflow: scroll;
               }
         #app-title{
           width: 25%;
