added keyboard key assignement to sampler

--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,7 @@
                 height: 125px;
                 margin: 25px;
                 border-radius: 10px;
+                border-width: 7px;
                 background: black;
                 font-family: 'Permanent Marker', cursive;
                 overflow: scroll;
