continued adding of error handling functionality

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
         border: 1.5px dashed;
         border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
         border-image-slice: 1;
-        width: 30%
+        width: 40%
       }
       .rainbow{
         padding: 5px;
@@ -67,21 +67,28 @@
         background-color: white;
       }
         .box {
-                display: inline-block;
-                width: 125px;
-                height: 125px;
-                margin: 25px;
-                border-radius: 10px;
-                border-width: 7px;
-                background: black;
-                font-family: 'Permanent Marker', cursive;
-                overflow: scroll;
+          display: inline-block;
+          width: 125px;
+          height: 125px;
+          margin: 25px;
+          border-radius: 10px;
+          border-width: 7px;
+          background: black;
+          font-family: 'Permanent Marker', cursive;
+          overflow: hidden;
               }
+        .regular{
+          border-radius: 10px;
+          border-width: 3px;
+          background: black;
+          font-family: 'Permanent Marker', cursive;
+          overflow: hidden;
+        }
         #app-title{
           width: 25%;
         }
         #sampler{
-          width:1080px;
+          width:1170px;
           height:420px;
         }
         #samples{
